[package]
name = "auto_puzzle"
version = "0.1.0"
edition = "2021"

[dependencies]
image = "0.25.2"
lazy_static = "1.5.0"
regex = "1.10.6"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
win-screenshot = "4.0.11"
winput = "0.2.5"

[dependencies.windows]
version = "0.57"
features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
]